[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scripts/Network_setup.gd" type="Script" id=1]

[node name="Network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 596.0 ],
"_edit_vertical_guides_": [ 1027.0 ]
}

[node name="multiplayer_configure" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="Create_Server" type="Button" parent="multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -100.0
margin_right = 128.0
margin_bottom = -48.0
text = "Host Server"

[node name="Join Server" type="Button" parent="multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -28.0
margin_right = 128.0
margin_bottom = 24.0
text = "Join Server"

[node name="Username_text_edit" type="LineEdit" parent="multiplayer_configure"]
margin_left = 320.0
margin_top = -204.0
margin_right = 704.0
margin_bottom = -156.0
align = 1
placeholder_text = "Enter Username"
placeholder_alpha = 0.76

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Device_ip_address" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -88.0
align = 1
valign = 1

[node name="Disconnect_Server" type="Button" parent="CanvasLayer"]
margin_left = 864.0
margin_top = 8.0
margin_right = 1019.0
margin_bottom = 54.0
text = "DISCONNECT"

[node name="Start_game" type="Button" parent="CanvasLayer"]
margin_right = 155.0
margin_bottom = 46.0
text = "START GAME"

[connection signal="pressed" from="multiplayer_configure/Create_Server" to="." method="_on_Create_Server_pressed"]
[connection signal="pressed" from="multiplayer_configure/Join Server" to="." method="_on_Join_Server_pressed"]
[connection signal="pressed" from="CanvasLayer/Disconnect_Server" to="." method="_on_Disconnect_Server_pressed"]
[connection signal="pressed" from="CanvasLayer/Start_game" to="." method="_on_Start_game_pressed"]
